# pingap-challenge

./: Cargo.toml  typos.toml
pingap-challenge/: Cargo.toml  README.md
pingap-challenge/src/: decrypt.rs  fingerprint.rs  lib.rs
pingap-challenge/src/assets/: challenge.html  crypto-js.js  crypto-js.min.js  fingerprint.js  fingerprint.min.js
src/: main.rs
web/src/: constants.ts
web/src/i18n/: en.ts  zh.ts
web/src/pages/: Plugins.tsx
