[package]
name = "pingap-challenge"
version = "0.12.0"
edition = "2021"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/pingap"
repository = "https://github.com/vicanso/pingap"
keywords = ["pingap", "challenge"]
description = "Challenge for pingap"

[lib]
name = "pingap_challenge"
path = "src/lib.rs"

[dependencies]
aes = "0.8.4"
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
block-padding = "0.3.3"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = { workspace = true }
cipher = "0.4.4"
cookie = { workspace = true }
ctor = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
md-5 = "0.10.6"
pingap-config = { version = "0.12.0", path = "../pingap-config" }
pingap-core = { version = "0.12.0", path = "../pingap-core" }
pingap-plugin = { version = "0.12.0", path = "../pingap-plugin" }
pingora = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["md-5"]

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"
tokio = { workspace = true }
